refactor : 지도 api 리팩토링
1) createMap : 지도를 만드는 함수
2) successOnGetPlace : 데이터 불러오는 것 성공 시 가져오는 함수
3) getMap : 주어진 위도,경도를 중심으로 지도를 얻어오는 함수
4) searchPlaces : 위도, 경도를 받아 키워드로 검색한 후 받은 데이터를 콜백하는 함수
5) addToFavorite : 찜하기 눌렀을 때 사용자의 찜하기 목록생성 함수

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <div class="map_wrap">
     <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
 
-    <div id="menu_wrap" class="bg_white">
+    <!-- <div id="menu_wrap" class="bg_white">
         <div class="option">
             <div>
                 <form onsubmit="searchPlaces(); return false;">
@@ -26,10 +26,10 @@
         <hr>
         <ul id="placesList"></ul>
         <div id="pagination"></div>
-    </div>
+    </div> -->
 </div>
 <div>
-    <button class="favoriteButton" id="favoriteButton">찜하기</button>
+    <button class="favoriteButton" id="favoriteButton" onclick="addToFavorite()">찜하기</button>
 </div>
 <script src="./src/index.js" defer></script>
 </body>
