--- a/public/index.html
+++ b/public/index.html
@@ -121,11 +121,12 @@
                         <input type="text" id="admin" name="admin"><br>
                         
                         <label for="signupEmail">이메일:</label> 
-                        <button type="submit">인증번호 전송</button>
+                        <button type="button" onclick="verifyEmail()">인증번호 전송</button>
                         <input type="email" id="email" name="email" autocomplete="additional-name"><br>
 
-                        <label for="verifyCode">인증번호 확인:</label> <button type="submit">인증번호 확인</button>
-                        <input type="text" id="verifyCode" name="verifyCode" autocomplete="additional-name"><br> 
+                        <label for="verifyCode">인증번호 확인:</label>
+                        <button type="button" onclick="verifyCode()">인증번호 확인</button>
+                        <input type="text" id="Code" name="Code" autocomplete="additional-name"><br> 
                       
                         <label for="signupNickname">닉네임:</label>
                         <input type="text" id="signupNickname" name="Nickname" autocomplete="additional-name"><br>
