--- a/public/terms.html
+++ b/public/terms.html
@@ -75,7 +75,7 @@
               <li><a href="./blog-details.html">Blog Details</a></li>
             </ul>
           </li>
-          <li><a href="./feed.html">Blog</a></li>
+          <li><a href="./blog.html">Blog</a></li>
           <li><a href="./contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -103,10 +103,13 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
-              <div class="header__top__left"></div>
+              <div class="header__top__left">
+                <ul></ul>
+              </div>
             </div>
             <div class="col-lg-6">
               <div class="header__top__right">
+                <div class="header__top__right__social">
                   <a href="#"><i class="fa fa-github"></i></a>
                 </div>
               </div>
@@ -114,8 +117,6 @@
           </div>
         </div>
       </div>
-       <!--216라인부터 245라인까지 모든 html에 복붙-->
-      <!--다른 html에서는 div class container의 div부터 해당 div가 끝나는 라인까지 복붙하면 됩니다. -->
       <div class="container">
         <div class="row">
           <div class="col-lg-3">
@@ -131,193 +132,206 @@
                 <li><a href="./preference.html">선호도</a></li>
                 <li><a href="./foodlist.html">메뉴판</a></li>
                 <li><a href="./menu-subscribe.html">메뉴 추천</a></li>
-                <li class="active"><a href="./feed.html">피드</a></li>
+                <li><a href="./feed.html">피드</a></li>
               </ul>
             </nav>
           </div>
+          <!--모든 페이지에 적용하려면 컨테이너 col-lg-6의 </div> 라인 밑에 242번라인~247번라인을 복붙하면 됩니다.-->
           <div class="col-lg-3">
+            <div class="header__cart">
+              <div class="header__cart__price"></div>
             </div>
           </div>
         </div>
+      </div>
     </header>
     <!-- Header Section End -->
-   
 
-    <!-- Feed Section Begin -->
-    <section class="from-blog spad">
+    <!-- Hero Section Begin -->
+    <section class="hero hero-normal">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="section-title from-blog__title">
-              <h2>Feed Page</h2>
-            </div>
-            <div class="product__details__tab">
-              <ul class="nav nav-tabs" role="tablist">
-                <li class="nav-item">
-                  <a
-                    class="nav-link active"
-                    data-toggle="tab"
-                    href="#tabs-1"
-                    role="tab"
-                    aria-selected="true"
-                    >좋아요순</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a
-                    class="nav-link"
-                    data-toggle="tab"
-                    href="#tabs-2"
-                    role="tab"
-                    aria-selected="false"
-                    >최신순</a
-                  >
-                </li>
+        <!-- <div class="row">
+          <div class="col-lg-3">
+            <div class="hero__categories">
+              <div class="hero__categories__all">
+                <i class="fa fa-bars"></i>
+                <span>All departments</span>
+              </div>
+              <ul>
+                <li><a href="#">Fresh Meat</a></li>
+                <li><a href="#">Vegetables</a></li>
+                <li><a href="#">Fruit & Nut Gifts</a></li>
+                <li><a href="#">Fresh Berries</a></li>
+                <li><a href="#">Ocean Foods</a></li>
+                <li><a href="#">Butter & Eggs</a></li>
+                <li><a href="#">Fastfood</a></li>
+                <li><a href="#">Fresh Onion</a></li>
+                <li><a href="#">Papayaya & Crisps</a></li>
+                <li><a href="#">Oatmeal</a></li>
+                <li><a href="#">Fresh Bananas</a></li>
               </ul>
             </div>
           </div>
-        </div>
+          <div class="col-lg-9">
+            <div class="hero__search">
+              <div class="hero__search__form">
+                <form action="#">
+                  <div class="hero__search__categories">
+                    All Categories
+                    <span class="arrow_carrot-down"></span>
+                  </div>
+                  <input type="text" placeholder="What do yo u need?" />
+                  <button type="submit" class="site-btn">SEARCH</button>
+                </form>
+              </div>
+              <div class="hero__search__phone">
+                <div class="hero__search__phone__icon">
+                  <i class="fa fa-phone"></i>
+                </div>
+                <div class="hero__search__phone__text">
+                  <h5>+65 11.188.888</h5>
+                  <span>support 24/7 time</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div> -->
+      </div>
+    </section>
+    <!-- Hero Section End -->
+    <!-- Contact Section Begin -->
+    <section class="contact spad">
+      <div class="container">
         <div class="row">
-          <!-- 피드 나누기 시작: 이 부분을 복사하면 피드가 여러 개 복사됨 -->
-          <div class="col-lg-4 col-md-4 col-sm-6">
-            <div class="blog__item">
-              <div class="blog__item__pic">
-                <img src="img/blog/blog-1.jpg" alt="" />
-              </div>
-              <div class="blog__item__text">
-                <h5><a href="#">Feed Title</a></h5>
-                <ul>
-                  <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
-                  <!-- 댓글 갯수 start 붙이면 좋을듯 -->
-                  <li><i class="fa fa-comment-o"></i> 5</li>
-                  <!-- 댓글 갯수 end -->
-                </ul>
-              </div>
-            </div>
+          <div class="col-lg-3 col-md-3 col-sm-6 text-center">
+            <!-- <div class="contact__widget">
+              <span class="icon_phone"></span>
+              <h4>Phone</h4>
+              <p>+01-3-8888-6868</p>
+            </div> -->
           </div>
-          <!-- 피드 나누기 끝: 이 부분을 복사하면 피드가 여러 개 복사됨 -->
-          <div class="col-lg-4 col-md-4 col-sm-6">
-            <div class="blog__item">
-              <div class="blog__item__pic">
-                <img src="img/blog/blog-2.jpg" alt="" />
-              </div>
-              <div class="blog__item__text">
-                <h5><a href="#">Feed Title</a></h5>
-                <ul>
-                  <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
-                  <li><i class="fa fa-comment-o"></i> 5</li>
-                </ul>
-              </div>
-            </div>
+          <div class="col-lg-3 col-md-3 col-sm-6 text-center">
+            <!-- <div class="contact__widget">
+              <span class="icon_pin_alt"></span>
+              <h4>Address</h4>
+              <p>60-49 Road 11378 New York</p>
+            </div> -->
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-6">
-            <div class="blog__item">
-              <div class="blog__item__pic">
-                <img src="img/blog/blog-3.jpg" alt="" />
-              </div>
-              <div class="blog__item__text">
-                <h5><a href="#">Feed Title</a></h5>
-                <ul>
-                  <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
-                  <li><i class="fa fa-comment-o"></i> 5</li>
-                </ul>
-              </div>
-            </div>
+          <div class="col-lg-3 col-md-3 col-sm-6 text-center">
+            <!-- <div class="contact__widget">
+              <span class="icon_clock_alt"></span>
+              <h4>Open time</h4>
+              <p>10:00 am to 23:00 pm</p>
+            </div> -->
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-6">
-            <div class="blog__item">
-              <div class="blog__item__pic">
-                <img src="img/blog/blog-4.jpg" alt="" />
-              </div>
-              <div class="blog__item__text">
-                <h5><a href="#">Feed Title</a></h5>
-                <ul>
-                  <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
-                  <li><i class="fa fa-comment-o"></i> 5</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-6">
-            <div class="blog__item">
-              <div class="blog__item__pic">
-                <img src="img/blog/blog-5.jpg" alt="" />
-              </div>
-              <div class="blog__item__text">
-                <h5><a href="#">Feed Title</a></h5>
-                <ul>
-                  <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
-                  <li><i class="fa fa-comment-o"></i> 5</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-6">
-            <div class="blog__item">
-              <div class="blog__item__pic">
-                <img src="img/blog/blog-6.jpg" alt="" />
-              </div>
-              <div class="blog__item__text">
-                <h5><a href="#">Feed Title</a></h5>
-                <ul>
-                  <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
-                  <li><i class="fa fa-comment-o"></i> 5</li>
-                </ul>
-              </div>
-            </div>
+          <div class="col-lg-3 col-md-3 col-sm-6 text-center">
+            <!-- <div class="contact__widget">
+              <span class="icon_mail_alt"></span>
+              <h4>Email</h4>
+              <p>hello@colorlib.com</p>
+            </div> -->
           </div>
         </div>
       </div>
     </section>
-    <!-- Feed Section End -->
+    <!-- Contact Section End -->
+
+    <!-- Map Begin -->
+    <!-- <div class="map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49116.39176087041!2d-86.41867791216099!3d39.69977417971648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886ca48c841038a1%3A0x70cfba96bf847f0!2sPlainfield%2C%20IN%2C%20USA!5e0!3m2!1sen!2sbd!4v1586106673811!5m2!1sen!2sbd"
+        height="500"
+        style="border: 0"
+        allowfullscreen=""
+        aria-hidden="false"
+        tabindex="0"
+      ></iframe>
+      <div class="map-inside">
+        <i class="icon_pin"></i>
+        <div class="inside-widget">
+          <h4>New York</h4>
+          <ul>
+            <li>Phone: +12-345-6789</li>
+            <li>Add: 16 Creek Ave. Farmingdale, NY</li>
+          </ul>
+        </div>
+      </div>
+    </div> -->
+    <!-- Map End -->
+
+    <!-- Contact Form Begin -->
+    <div class="contact-form spad">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="contact__form__title">
+              <h2>이용 약관</h2>
+            </div>
+          </div>
+        </div>
+        <form action="#">
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <p>1. 약관 1~~~</p>
+              <br />
+              <p>2. 약관 2~~~</p>
+              <br />
+              <p>3. 약관 3~~~</p>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <!-- Contact Form End -->
 
     <!-- Footer Section Begin -->
-   <footer class="footer spad">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-3 col-md-6 col-sm-6">
-          <div class="footer__about">
-            <div class="footer__about__logo">
-              <a href="./index.html"><img src="img/logo.png" alt="" /></a>
+    <footer class="footer spad">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="footer__about">
+              <div class="footer__about__logo">
+                <a href="./index.html"><img src="img/logo.png" alt="" /></a>
+              </div>
+              <ul>
+                <li>team: 점메추 저메추</li>
+                <li>김세령</li>
+                <li>오준석</li>
+                <li>이서원</li>
+                <li>최하영</li>
+                <li>함형진</li>
+              </ul>
             </div>
-            <ul>
-              <li>team: 점메추 저메추</li>
-              <li>김세령</li>
-              <li>오준석</li>
-              <li>이서원</li>
-              <li>최하영</li>
-              <li>함형진</li>
-            </ul>
           </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-6 offset-lg-1">
-          <div class="footer__widget">
-            <h6>Useful Links</h6>
-            <ul>
-              <li><a href="./terms.html">이용 약관</a></li>
-            </ul>
+          <div class="col-lg-4 col-md-6 col-sm-6 offset-lg-1">
+            <div class="footer__widget">
+              <h6>Useful Links</h6>
+              <ul>
+                <li><a href="./terms.html">이용 약관</a></li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <div class="col-lg-4 col-md-12">
-          <div class="footer__widget">
-            <h6>팀 점메추저메추 깃허브</h6>
-            <p>
-            </p>
-            <!-- <form action="#">
+          <div class="col-lg-4 col-md-12">
+            <div class="footer__widget">
+              <h6>팀 점메추저메추 깃허브</h6>
+              <p></p>
+              <!-- <form action="#">
               <input type="text" placeholder="Enter your mail" />
               <button type="submit" class="site-btn">Subscribe</button>
             </form> -->
-            <div class="footer__widget__social">
-              <a href="https://github.com/Final-Project-mechu"><i class="fa fa-github"></i></a>
-              <!-- <a href="#"><i class="fa fa-instagram"></i></a>
+              <div class="footer__widget__social">
+                <a href="https://github.com/Final-Project-mechu"
+                  ><i class="fa fa-github"></i
+                ></a>
+                <!-- <a href="#"><i class="fa fa-instagram"></i></a>
               <a href="#"><i class="fa fa-twitter"></i></a>
               <a href="#"><i class="fa fa-pinterest"></i></a> -->
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="row">
-        <!-- <div class="col-lg-12">
+        <div class="row">
+          <!-- <div class="col-lg-12">
           <div class="footer__copyright">
             <div class="footer__copyright__text">
               <p>
@@ -336,10 +350,10 @@
             </div>
           </div>
         </div> -->
+        </div>
       </div>
-    </div>
-  </footer>
-  <!-- Footer Section End -->
+    </footer>
+    <!-- Footer Section End -->
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
