--- a/public/menu-subscribe.html
+++ b/public/menu-subscribe.html
@@ -115,6 +115,8 @@
           </div>
         </div>
       </div>
+      <!--216라인부터 245라인까지 모든 html에 복붙-->
+      <!--다른 html에서는 div class container의 div부터 해당 div가 끝나는 라인까지 복붙하면 됩니다. -->
       <div class="container">
         <div class="row">
           <div class="col-lg-3">
@@ -122,135 +124,75 @@
               <a href="./index.html"><img src="img/logo.png" alt="" /></a>
             </div>
           </div>
+          <nav class="humberger__menu__nav mobile-menu"></nav>
           <div class="col-lg-6">
             <nav class="header__menu">
               <ul>
                 <li><a href="./index.html">홈</a></li>
-                <li class="active">
-                  <a href="./menu-subscribe.html">메뉴 추천</a>
-                </li>
-                <li>
-                  <a href="#">추가 페이지</a>
-                  <ul class="header__menu__dropdown">
-                    <li><a href="./contact.html">이용 약관</a></li>
-                  </ul>
-                </li>
+                <li><a href="./preference.html">선호도</a></li>
+                <li><a href="./foodlist.html">메뉴판</a></li>
+                <li class="active"><a href="./menu-subscribe.html">메뉴 추천</a></li>
                 <li><a href="./feed.html">피드</a></li>
-                <li><a href="./shoping-cart.html">메뉴판</a></li>
               </ul>
             </nav>
           </div>
           <div class="col-lg-3">
-            <!-- <div class="header__cart">
-              <ul>
-                <li>
-                  <a href="#"><i class="fa fa-heart"></i> <span>1</span></a>
-                </li>
-                <li>
-                  <a href="#"
-                    ><i class="fa fa-shopping-bag"></i> <span>3</span></a
-                  >
-                </li>
-              </ul>
-              <div class="header__cart__price">item: <span>$150.00</span></div>
-            </div> -->
+            </div>
           </div>
         </div>
-        <div class="humberger__open">
-          <i class="fa fa-bars"></i>
-        </div>
-      </div>
     </header>
     <!-- Header Section End -->
-
-    <!-- Hero Section Begin -->
-    <section class="hero hero-normal">
-      <div class="container">
-        <!-- <div class="row">
-          <div class="col-lg-3">
-            <div class="hero__categories">
-              <div class="hero__categories__all">
-                <i class="fa fa-bars"></i>
-                <span>All departments</span>
-              </div>
-              <ul>
-                <li><a href="#">Fresh Meat</a></li>
-                <li><a href="#">Vegetables</a></li>
-                <li><a href="#">Fruit & Nut Gifts</a></li>
-                <li><a href="#">Fresh Berries</a></li>
-                <li><a href="#">Ocean Foods</a></li>
-                <li><a href="#">Butter & Eggs</a></li>
-                <li><a href="#">Fastfood</a></li>
-                <li><a href="#">Fresh Onion</a></li>
-                <li><a href="#">Papayaya & Crisps</a></li>
-                <li><a href="#">Oatmeal</a></li>
-                <li><a href="#">Fresh Bananas</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-9">
-            <div class="hero__search">
-              <div class="hero__search__form">
-                <form action="#">
-                  <div class="hero__search__categories">
-                    All Categories
-                    <span class="arrow_carrot-down"></span>
-                  </div>
-                  <input type="text" placeholder="What do yo u need?" />
-                  <button type="submit" class="site-btn">SEARCH</button>
-                </form>
-              </div>
-              <div class="hero__search__phone">
-                <div class="hero__search__phone__icon">
-                  <i class="fa fa-phone"></i>
-                </div>
-                <div class="hero__search__phone__text">
-                  <h5>+65 11.188.888</h5>
-                  <span>support 24/7 time</span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> -->
-      </div>
-    </section>
-    <!-- Hero Section End -->
-
-    <!-- Breadcrumb Section Begin -->
-    <section class="breadcrumb-section set-bg" data-setbg="img/breadcrumb.jpg">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <div class="breadcrumb__text">
-              <h2>점메추저메추</h2>
-              <div class="breadcrumb__option">
-                <a href="./index.html">홈으로</a>
-                <span>메뉴 추천 페이지</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Breadcrumb Section End -->
-
     <!-- Product Section Begin -->
-
-    <div class="col-lg-12">
-
-      <div class="featured__controls">
-        <ul>
-          <li class="active" data-filter="*">All</li>
-          <li data-filter=".oranges">선호 음식</li>
-          <li data-filter=".fresh-meat">비선호 음식</li>
-          <li data-filter=".vegetables">비선호 재료</li>
-          <li data-filter=".vegetables">제외 포함된 음식</li>
-          <br>
-
-        </ul>
+    <div class="meal-all">
+      <h2>메뉴 추천받기</h2>
+            <div class="image-container" >
+              <img src="/img/simsimi.png" alt="" class="center-image" >
+           </div>
+      <div class="filter-buttons">
+          <button class="filter-button" data-category="meal">식사</button>
+          <button class="filter-button" data-category="dessert">디저트</button>
       </div>
+      <div class="sub-filter-buttons">
+          <button class="sub-filter-button" data-category="all-meal">전체</button>
+          <button class="sub-filter-button" data-category="korean">한식</button>
+          <button class="sub-filter-button" data-category="chinese">중식</button>
+          <button class="sub-filter-button" data-category="japanese">일식</button>
+          <button class="sub-filter-button" data-category="western">양식</button>
+          <button class="sub-filter-button" data-category="indian">인도식</button>
+      </div>
+      <div class="sub-filter-buttons">
+          <button class="sub-filter-button" data-category="all">전체</button>
+          <button class="sub-filter-button" data-category="coffee">커피</button>
+          <button class="sub-filter-button" data-category="cake">케이크</button>
+          <button class="sub-filter-button" data-category="bread">빵</button>
+          <button class="sub-filter-button" data-category="tanghulu">탕후루</button>
+          <button class="sub-filter-button" data-category="icecream">아이스크림</button>
+      </div>
+     <main>
+      <div class="food-item meal korean">한식 1</div>
+      <div class="food-item meal chinese">중식 1</div>
+      <div class="food-item meal japanese">일식 1</div>
+      <div class="food-item meal western">양식 1</div>
+      <div class="food-item meal indian">인도식 1</div>
+      <div class="food-item dessert coffee">커피 1</div>
+      <div class="food-item dessert cake">케이크 1</div>
+      <div class="food-item dessert bread">빵 1</div>
+      <div class="food-item dessert tanghulu">탕후루 1</div>
+      <div class="food-item dessert icecream">아이스크림 1</div>
+      </main>
+</div>
 
-      <div class="product__details__tab">
+<div class="button-container2">
+  <button class="button">메뉴 추천받기!</button>
+</div>
+
+<div class="button-container3">
+  <button class="button">맛집 추천받기!</button>
+</div>
+
+
+
+      <!-- <div class="product__details__tab">
         <ul class="nav nav-tabs" role="tablist">
           <li class="nav-item">
             <a
@@ -371,7 +313,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
         <!-- <div class="container">
         <div class="row">
@@ -1067,72 +1009,36 @@
                 <a href="./index.html"><img src="img/logo.png" alt="" /></a>
               </div>
               <ul>
-                <li>team: 점메추 저메추</li>
-                <li>김세령</li>
-                <li>오준석</li>
-                <li>이서원</li>
-                <li>최하영</li>
-                <li>함형진</li>
+                <p>TEAM : 오늘 뭐 먹지? TOGETHER EAT!</p>
+                <p>김세령 오준석 이서원 최하영 함형진</p>
               </ul>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 col-sm-6 offset-lg-1">
+          <div class="col-lg-4 col-md-6 col-sm-5 offset-lg-1">
             <div class="footer__widget">
               <h6>Useful Links</h6>
               <ul>
-                <li><a href="#">이용 약관</a></li>
-                <!-- <li><a href="#">About Our Shop</a></li>
-              <li><a href="#">Secure Shopping</a></li>
-              <li><a href="#">Delivery infomation</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Our Sitemap</a></li> -->
+                <li><a href="./terms.html">이용 약관</a></li>
               </ul>
             </div>
           </div>
           <div class="col-lg-4 col-md-12">
             <div class="footer__widget">
-              <h6>팀 점메추저메추 깃허브</h6>
-              <p></p>
-              <!-- <form action="#">
-              <input type="text" placeholder="Enter your mail" />
-              <button type="submit" class="site-btn">Subscribe</button>
-            </form> -->
+              <h6>GitHub</h6>
               <div class="footer__widget__social">
                 <a href="https://github.com/Final-Project-mechu"
                   ><i class="fa fa-github"></i
                 ></a>
-                <!-- <a href="#"><i class="fa fa-instagram"></i></a>
-              <a href="#"><i class="fa fa-twitter"></i></a>
-              <a href="#"><i class="fa fa-pinterest"></i></a> -->
               </div>
             </div>
           </div>
         </div>
         <div class="row">
-          <!-- <div class="col-lg-12">
-          <div class="footer__copyright">
-            <div class="footer__copyright__text">
-              <p>
-                Copyright &copy;
-                <script>
-                  document.write(new Date().getFullYear());
-                </script>
-                All rights reserved | This template is made with
-                <i class="fa fa-heart" aria-hidden="true"></i> by
-                <a href="https://colorlib.com" target="_blank">Colorlib</a>
-
-              </p>
-            </div>
-            <div class="footer__copyright__payment">
-              <img src="img/payment-item.png" alt="" />
-            </div>
-          </div>
-        </div> -->
         </div>
       </div>
     </footer>
     <!-- Footer Section End -->
-
+    <script src="./src/mechu.js" defer></script>
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
