feat. 선호 메뉴 조회 GET 함수 기능추가
선호 메뉴 조회기능 추가
=> 테스트 완료
=> 프론트적으로 깔끔해 보이게 붙여야 함(수정 중)

--- a/public/kakaomap-api.html
+++ b/public/kakaomap-api.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header>
-      <button
+      <!-- <button
         class="btn btn-light login-button"
         data-bs-toggle="modal"
         data-bs-target="#loginModal"
@@ -31,8 +31,8 @@
         tabindex="-1"
         aria-labelledby="loginModalLabel"
         aria-hidden="true"
-      >
-        <div class="modal-dialog">
+      > -->
+        <!-- <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="loginModalLabel">로그인</h5>
@@ -78,7 +78,7 @@
               </button>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </header>
     <div class="map_wrap">
@@ -96,7 +96,7 @@
         찜하기
       </button>
     </div>
-    <script src="./src/index.js" defer></script>
-    <script src="./src/sign.js" defer></script>
+    <script src="./src/kakaomap-api.js" defer></script>
+    <!-- <script src="./src/sign.js" defer></script> -->
   </body>
 </html>
