feat: 마이페이지에 버튼 추가하고 친구 기능 추가
마이페이지에 각 버튼 추가하고 친구 기능 추가해뒀습니다.

--- a/public/index.html
+++ b/public/index.html
@@ -379,6 +379,7 @@
               <h6>Useful Links</h6>
               <ul>
                 <li><a href="./terms.html">이용 약관</a></li>
+                <li><a href="./checkout.html">마이페이지</a></li>
               </ul>
             </div>
           </div>
