--- a/public/checkout.html
+++ b/public/checkout.html
@@ -6,7 +6,8 @@
     <meta name="keywords" content="Ogani, unica, creative, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Ogani | Template</title>
+    <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
+    <title>점메추저메추</title>
 
     <!-- Google Font -->
     <link
@@ -108,10 +109,7 @@
               <div class="header__top__right">
                 <div class="header__top__right__social">
                   <a href="#"><i class="fa fa-github"></i></a>
-               
                 </div>
-
-               
                 </div>
               </div>
             </div>
@@ -141,24 +139,6 @@
       </div>
     </header>
     <!-- Header Section End -->
-
-    <!-- Breadcrumb Section Begin -->
-    <section class="breadcrumb-section set-bg" data-setbg="img/breadcrumb.jpg">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <div class="breadcrumb__text">
-              <h2>마이페이지(임시)</h2>
-              <div class="breadcrumb__option">
-                <a href="./index.html">홈으로</a>
-                <span>마이페이지</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Breadcrumb Section End -->
 
     <!-- Checkout Section Begin -->
     <section class="checkout spad">
@@ -197,54 +177,56 @@
                     <input type="checkbox" id="diff-acc" />
                     <span class="checkmark"></span>
                   </label>
-                  <div>여기에 버튼 추가</div>
+                  <button type="button" id="friend">친구 추가</button>
+                    <!-- 모달 창 -->
+                    <div id="myModal" class="modal">
+                      <div class="modal-content">
+                        <span class="close">&times;</span>
+                        <h2>친구 추가</h2>
+                        <label for="sender">요청 주체:</label>
+                        <input type="text" id="sender" name="sender">
+                        <label for="requestTarget">요청 대상:</label>
+                        <input type="text" id="requestTarget" name="requestTarget">
+                        <label for="status">상태:</label>
+                        <input type="text" id="status" name="status">
+                        <!-- 여기에 다른 필요한 입력 항목을 추가할 수 있습니다. -->
+                        <button id="requestButton" onclick="addFriend()">요청 보내기</button>
+                      </div>
+                    </div>
+                    <button type="button" id="friendAccept">친구 수락</button>
+                    <!-- 모달 창 -->
+                    <div id="myModalAccpet" class="modal">
+                      <div class="modal-content">
+                        <span class="close">&times;</span>
+                        <h2>요청 수락</h2>
+                        <label for="senderEmail">요청 주체:</label>
+                        <input type="text" id="senderEmail" name="senderEmail">
+                        <label for="requestTargetEmail">요청 대상:</label>
+                        <input type="text" id="requestTargetEmail" name="requestTargetEmail">
+                        <label for="status2">상태:</label>
+                        <input type="text" id="status2" name="status2">
+                        <!-- 여기에 다른 필요한 입력 항목을 추가할 수 있습니다. -->
+                        <button id="requestButton" onclick="accpetFriend()">요청 보내기</button>
+                      </div>
+                    </div>
+                    <button type="button" id="friendReject">친구 거절</button>
+                    <!-- 모달 창 -->
+                    <div id="myModalReject" class="modal">
+                      <div class="modal-content">
+                        <span class="close">&times;</span>
+                        <h2>요청 거절</h2>
+                        <label for="senderEmail2">요청 주체:</label>
+                        <input type="text" id="senderEmail2" name="senderEmail2">
+                        <label for="requestTargetEmail2">거절 대상:</label>
+                        <input type="text" id="requestTargetEmail2" name="requestTargetEmail2">
+                        <label for="status3">상태:</label>
+                        <input type="text" id="status3" name="status3">
+                        <!-- 여기에 다른 필요한 입력 항목을 추가할 수 있습니다. -->
+                        <button type="submit" id="requestButton" onclick="rejectFriend()">요청 거절하기</button>
+                      </div>
+                    </div>
                 </div>
               </div>
-              <!-- <div class="col-lg-4 col-md-6">
-                <div class="checkout__order">
-                  <h4>Your Order</h4>
-                  <div class="checkout__order__products">
-                    Products <span>Total</span>
-                  </div>
-                  <ul>
-                    <li>Vegetable’s Package <span>$75.99</span></li>
-                    <li>Fresh Vegetable <span>$151.99</span></li>
-                    <li>Organic Bananas <span>$53.99</span></li>
-                  </ul>
-                  <div class="checkout__order__subtotal">
-                    Subtotal <span>$750.99</span>
-                  </div>
-                  <div class="checkout__order__total">
-                    Total <span>$750.99</span>
-                  </div>
-                  <div class="checkout__input__checkbox">
-                    <label for="acc-or">
-                      Create an account?
-                      <input type="checkbox" id="acc-or" />
-                      <span class="checkmark"></span>
-                    </label>
-                  </div>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adip elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  </p>
-                  <div class="checkout__input__checkbox">
-                    <label for="payment">
-                      Check Payment
-                      <input type="checkbox" id="payment" />
-                      <span class="checkmark"></span>
-                    </label>
-                  </div>
-                  <div class="checkout__input__checkbox">
-                    <label for="paypal">
-                      Paypal
-                      <input type="checkbox" id="paypal" />
-                      <span class="checkmark"></span>
-                    </label>
-                  </div>
-                  <button type="submit" class="site-btn">PLACE ORDER</button>
-                </div>
-              </div> -->
             </div>
           </form>
         </div>
@@ -275,12 +257,8 @@
           <div class="footer__widget">
             <h6>Useful Links</h6>
             <ul>
-              <li><a href="#">이용 약관</a></li>
-              <!-- <li><a href="#">About Our Shop</a></li>
-            <li><a href="#">Secure Shopping</a></li>
-            <li><a href="#">Delivery infomation</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Our Sitemap</a></li> -->
+              <li><a href="./terms.html">이용 약관</a></li>
+              <li><a href="./checkout.html">마이페이지</a></li>
             </ul>
           </div>
         </div>
@@ -304,31 +282,12 @@
         </div>
       </div>
       <div class="row">
-        <!-- <div class="col-lg-12">
-        <div class="footer__copyright">
-          <div class="footer__copyright__text">
-            <p>
-              Copyright &copy;
-              <script>
-                document.write(new Date().getFullYear());
-              </script>
-              All rights reserved | This template is made with
-              <i class="fa fa-heart" aria-hidden="true"></i> by
-              <a href="https://colorlib.com" target="_blank">Colorlib</a>
-
-            </p>
-          </div>
-          <div class="footer__copyright__payment">
-            <img src="img/payment-item.png" alt="" />
-          </div>
-        </div>
-      </div> -->
       </div>
     </div>
   </footer>
   <!-- Footer Section End -->
 
-
+    <script src="./src/mypage.js"></script>
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
