--- a/public/terms.html
+++ b/public/terms.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zxx">
   <head>
     <meta charset="UTF-8" />
@@ -308,6 +308,7 @@
               <h6>Useful Links</h6>
               <ul>
                 <li><a href="./terms.html">이용 약관</a></li>
+                <li><a href="./checkout.html">마이페이지</a></li>
               </ul>
             </div>
           </div>
