fix: 프론트엔드 수정작업
프론트엔드 간단하게 수정했습니다.

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -152,8 +152,6 @@
                 <div class="row">
                   <div class="col-lg-6">
                     <div class="checkout__input">
-                      <p>닉네임 가져오기</p>
-                      <input type="text" />
                     </div>
                   </div>
                 </div>
@@ -190,7 +188,7 @@
                         <label for="status">상태:</label>
                         <input type="text" id="status" name="status">
                         <!-- 여기에 다른 필요한 입력 항목을 추가할 수 있습니다. -->
-                        <button id="requestButton" onclick="addFriend()">요청 보내기</button>
+                        <button type="submit" id="requestButton" onclick="addFriend()">요청 보내기</button>
                       </div>
                     </div>
                     <button type="button" id="friendAccept">친구 수락</button>
@@ -206,7 +204,7 @@
                         <label for="status2">상태:</label>
                         <input type="text" id="status2" name="status2">
                         <!-- 여기에 다른 필요한 입력 항목을 추가할 수 있습니다. -->
-                        <button id="requestButton" onclick="accpetFriend()">요청 보내기</button>
+                        <button type="submit" id="requestButton" onclick="accpetFriend()">요청 보내기</button>
                       </div>
                     </div>
                     <button type="button" id="friendReject">친구 거절</button>
