--- a/public/index.html
+++ b/public/index.html
@@ -213,7 +213,7 @@
           </div>
         </div>
       </div>
-      <!--index.html의 216라인부터 249라인까지 모든 html에 복붙하고 복붙한 리스트 클래스에 class=action을 적용시켜줍니다.-->
+      <!--index.html의 해당라인부터 div가 끝나는 라인까지 모든 html에 복붙하고 복붙한 리스트 클래스에 class=action을 적용시켜줍니다.-->
       <!--다른 html에서는 div class=container의 div부터 해당 div가 끝나는 라인까지 복붙하면 됩니다. 잘 모르겠으면 메뉴를 검색해서 나오는 컨테이너를 찾아 복붙-->
       <div class="container">
         <div class="row">
