fix: 메뉴 추천받기 프론트 작업
준석님과 논의했던 방향에 따라 메뉴 추천받기 버튼을 누르면 상단에
추천받은 메뉴가 텍스트로 출력되도록 수정했습니다.

--- a/public/menu-subscribe.html
+++ b/public/menu-subscribe.html
@@ -149,6 +149,8 @@
         <img src="/img/simsimi.png" alt="" class="center-image" />
       </div>
 
+      <div id="result3"></div>
+
       <!-- 여기에 button-container 요소를 추가합니다.
       <div id="button-container"></div> -->
 
