feat. 메뉴 추천페이지 지도 api 띄우기 구현
메뉴 추천받기를 한 후 메뉴가 나오면
맛집 추천받기 버튼이 생성되고 맛집추천받기를 클릭하면
지도 api 페이지 새창이 뜸

그러나 추천 받은 메뉴를 매개변수로 함수를 호출하는 데에는 실패

--- a/public/feed.html
+++ b/public/feed.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Ogani, unica, creative, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>점메추저메추</title>
+    <title>오늘 뭐 먹지?</title>
 
     <!-- Google Font -->
     <link
