--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>점메추저메추</title>
+    <title>오늘 뭐 먹지?</title>
 
     <Google Font>
     <link
@@ -213,7 +213,7 @@
           </div>
         </div>
       </div>
-      <!--index.html의 216라인부터 249라인까지 모든 html에 복붙하고 복붙한 리스트 클래스에 class=action을 적용시켜줍니다.-->
+      <!--index.html의 해당라인부터 div가 끝나는 라인까지 모든 html에 복붙하고 복붙한 리스트 클래스에 class=action을 적용시켜줍니다.-->
       <!--다른 html에서는 div class=container의 div부터 해당 div가 끝나는 라인까지 복붙하면 됩니다. 잘 모르겠으면 메뉴를 검색해서 나오는 컨테이너를 찾아 복붙-->
       <div class="container">
         <div class="row">
@@ -365,31 +365,62 @@
                 <a href="./index.html"><img src="img/logo.png" alt="" /></a>
               </div>
               <ul>
-                <p>TEAM : 오늘 뭐 먹지? TOGETHER EAT!</p>
-                <p>김세령 오준석 이서원 최하영 함형진</p>
+                <li>team: 점메추 저메추</li>
+                <li>김세령</li>
+                <li>오준석</li>
+                <li>이서원</li>
+                <li>최하영</li>
+                <li>함형진</li>
               </ul>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 col-sm-5 offset-lg-1">
+          <div class="col-lg-4 col-md-6 col-sm-6 offset-lg-1">
             <div class="footer__widget">
               <h6>Useful Links</h6>
               <ul>
                 <li><a href="./terms.html">이용 약관</a></li>
+                <li><a href="./checkout.html">마이페이지</a></li>
               </ul>
             </div>
           </div>
           <div class="col-lg-4 col-md-12">
             <div class="footer__widget">
-              <h6>GitHub</h6>
+              <h6>팀 점메추저메추 깃허브</h6>
+              <p>
+              </p>
+              <!-- <form action="#">
+                <input type="text" placeholder="Enter your mail" />
+                <button type="submit" class="site-btn">Subscribe</button>
+              </form> -->
               <div class="footer__widget__social">
-                <a href="https://github.com/Final-Project-mechu"
-                  ><i class="fa fa-github"></i
-                ></a>
+                <a href="https://github.com/Final-Project-mechu"><i class="fa fa-github"></i></a>
+                <!-- <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-pinterest"></i></a> -->
               </div>
             </div>
           </div>
         </div>
         <div class="row">
+          <!-- <div class="col-lg-12">
+            <div class="footer__copyright">
+              <div class="footer__copyright__text">
+                <p>
+                  Copyright &copy;
+                  <script>
+                    document.write(new Date().getFullYear());
+                  </script>
+                  All rights reserved | This template is made with
+                  <i class="fa fa-heart" aria-hidden="true"></i> by
+                  <a href="https://colorlib.com" target="_blank">Colorlib</a>
+
+                </p>
+              </div>
+              <div class="footer__copyright__payment">
+                <img src="img/payment-item.png" alt="" />
+              </div>
+            </div>
+          </div> -->
         </div>
       </div>
     </footer>
