--- a/public/kakaomap-api.html
+++ b/public/kakaomap-api.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>키워드로 장소검색하고 목록으로 표출하기</title>
+    <title>오늘 뭐 먹지?</title>
     <link rel="stylesheet" href="./style/index.css" />
     <script
       type="text/javascript"
@@ -15,6 +15,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Axios 로드 -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- <script type="module" src="./src/kakaomap-api.js"></script>
+    <script type="module" src="./src/menu-subscribe.js"></script> -->
+    <script src="./src/kakaomap-api.js" defer></script>
+    <script src="./src/menu-subscribe.js" defer></script>
   </head>
   <body>
     <header>
@@ -96,7 +100,7 @@
         찜하기
       </button>
     </div>
-    <script src="./src/kakaomap-api.js" defer></script>
+
     <!-- <script src="./src/sign.js" defer></script> -->
   </body>
 </html>
