--- a/public/shop-details.html
+++ b/public/shop-details.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Ogani, unica, creative, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>점메추저메추</title>
+    <title>오늘 뭐 먹지?</title>
 
     <!-- Google Font -->
     <link
