refactor. 메뉴추천 페이지 refactoring
메뉴 추천 페이지 버튼 설정 모듈 / menu-subscribe 연결부 분리
지도 api 페이지 menu-subscribe / kakaomap-api 모듈 분리하여 html 추가

--- a/public/menu-subscribe.html
+++ b/public/menu-subscribe.html
@@ -25,8 +25,13 @@
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <!-- script import -->
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=ca07a2cd35a8566747953c5991111a1a&libraries=services"
+    ></script>
     <script src="./src/mechu.js" defer></script>
     <script src="./src/menu-subscribe.js" defer></script>
+    <script src="./src/menu-button.js" defer></script>
   
   </head>
 
