feat: 회원가입 시 어드민 칸을 지우고 유저가 선택할 수 있게 함
현재는 체크해도 어드민값을 0으로 부여하고 있어서 1값 부여 추가 필요

--- a/public/index.html
+++ b/public/index.html
@@ -123,8 +123,9 @@
                     <div id="signupModal" class="modal">
                       <div class="modal-content">
                         <form>
-                          <label for="admin">어드민 구분:</label>
-                          <input type="text" id="admin" name="admin" /><br />
+                          <label for="admin">체크 시 어드민</label>
+                          <input type="checkbox" id="admin" name="admin" value="1" />
+                          <br>
 
                           <label for="signupEmail">이메일:</label>
                           <button type="button" onclick="verifyEmail()">인증번호 전송</button>
