마이페이지 프론트 뼈대 작업

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
-    <title>점메추저메추</title>
+    <title>오늘 뭐 먹지?</title>
 
     <Google Font>
     <link
@@ -123,8 +123,8 @@
                     <div id="signupModal" class="modal">
                       <div class="modal-content">
                         <form>
-                          <label for="admin">체크 시 어드민</label>
-                          <input type="checkbox" id="admin" name="admin" value="1" />
+                          <label for="admin">어드민</label>
+                         <input id="admin" name="admin" value="1" />
                           <br>
 
                           <label for="signupEmail">이메일:</label>
@@ -231,7 +231,7 @@
                 <li><a href="./foodlist.html">메뉴판</a></li>
                 <li><a href="./menu-subscribe.html">메뉴 추천</a></li>
                 <li><a href="./feed.html">피드</a></li>
-                <li><a href="./kakaologin.html">테스트</a></li>
+                <li><a href="./blog-details.html">마이페이지용</a></li>
               </ul>
             </nav>
           </div>
