--- a/public/terms.html
+++ b/public/terms.html
@@ -6,6 +6,7 @@
     <meta name="keywords" content="Ogani, unica, creative, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
     <title>점메추저메추</title>
 
     <!-- Google Font -->
@@ -277,6 +278,7 @@
               <p>2. 약관 2~~~</p>
               <br />
               <p>3. 약관 3~~~</p>
+              <button onclick="admintransfer()">어드민 변환</button>
             </div>
           </div>
         </form>
@@ -355,6 +357,8 @@
       </div>
     </footer>
     <!-- Footer Section End -->
+
+    <script src="./src/admin.js"></script>
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
