feat: feed-create 프론트엔드 작업
1. 취소 버튼을 누르면 피드 페이지로 이동
2. 담았던 상점 보기  버튼 속성을 button으로 변경하여 새로고침 방지
3. 담았던 상점 보기 내부에 항목 리스트화, 선택하기 버튼 삽입
4. --선택하기 버튼 클릭 시 인풋필드 텍스트 표시는 구현중--

--- a/public/feed-create.html
+++ b/public/feed-create.html
@@ -110,8 +110,8 @@
                         </div>
                     </div>
                     <div class="col-lg-12 text-center">
-                        <button id="writeBtn" type="submit" class="site-btn">글쓰기</button>
-                        <button id="cancelBtn" class="site-btn">취소</button>
+                        <button id="writeBtn" type="button" class="site-btn">글쓰기</button>
+                        <button id="cancelBtn" class="site-btn" type="button" onclick="redirectToFeedPage()">취소</button>
                     </div>
                 </div>
             </form>
