feat: 프론트에서 유저 정보수정, 회원탈퇴기능 추가
마이 페이지에서 닉네임, 비밀번호 변경 기능 추가 후 테스트 완료
마이 페이지에서 회원 탈퇴 기능 추가 후 테스트 완료
> 변경점: 회원 탈퇴 메서드를 POST로 변경

--- a/public/index.html
+++ b/public/index.html
@@ -231,7 +231,7 @@
                 <li><a href="./foodlist.html">메뉴판</a></li>
                 <li><a href="./menu-subscribe.html">메뉴 추천</a></li>
                 <li><a href="./feed.html">피드</a></li>
-                <li><a href="./blog-details.html">마이페이지용</a></li>
+                <li><a href="./mypage.html">마이페이지용</a></li>
               </ul>
             </nav>
           </div>
