--- a/public/mypage.html
+++ b/public/mypage.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Ogani, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="http://unpkg.com/axios/dist/axios.min.js"></script>
     <title>오늘 뭐 먹지?</title>
 
     <!-- Google Font -->
@@ -165,9 +166,7 @@
         <div>
           <form action="#" style="text-align: center">
             <h2>내 정보</h2> <br>
-            <span id="profile-email">1. 이메일 정보</span> <br>  <br>
-            <span id="profile-nickName">2. 닉네임 정보</span> <br>  <br>
-            <span id="profile-food-img">3. 닉네임의 음식 사진</span>
+            <div id="profile-nickName"></div>
           </form>
         </div>
         
@@ -176,26 +175,40 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="section-title">
-                            <h2>사진 들어오는 곳</h2>
+                            <h2>마이페이지: 오늘의 메뉴</h2>
                         </div>
                         <div class="featured__controls">
                         </div>
                     </div>
                 </div>
-                <div class="row featured__filter">
-                    <div class="col-lg-3 col-md-4 col-sm-6 mix chinese">
-                        <div class="featured__item">
-                            <div class="featured__item__pic set-bg" data-setbg="https://search.pstatic.net/common/?src=http%3A%2F%2Fblogfiles.naver.net%2FMjAyMzA3MThfMTMx%2FMDAxNjg5Njc0NTg2MDEw.WPcAkQjFFaUZBvq49aVwv8FgDKOurIRkqv52hVmH-HMg.ekmPPlVUAA9_JGjpY-F1jlvtR3Mfg2V1hP_V_RNZEcUg.JPEG.techmass3%2F20230718_120811.jpg&type=a340">
-                                <ul class="featured__item__pic__hover">
-                                </ul>
-                            </div>
-                            <div class="featured__item__text">
-                                <h6><a href="#">음식 이미지</a></h6>
-                            </div>
-                        </div>
-              </div>
+              </div>  
              </section>
-    
+             <div>
+              <button id="open-modal-button">유저 정보 수정</button>
+              </div>
+             <!-- 모달 창 -->
+              <div id="modal" style="display: none;">
+               <h5>비밀번호 수정</h5>
+                <label for="newNick_Name">변경할 닉네임:</label>
+               <input type="newNick_Name" id="newNick_Name">
+                <label for="password">현재 비밀번호:</label>
+                <input type="password" id="password">
+                <label for="new-password">새 비밀번호:</label>
+                <input type="password" id="new-password">
+                <button id="update-password-button">수정하기</button>
+               </div>
+               <div>
+                <button id="open-modal-delete">회원 탈퇴</button>
+                </div>
+               <!-- 모달 창 -->
+                <div id="modal-delete" style="display: none;">
+                 <h5>회원 탈퇴</h5>
+                  <label for="password-delete1">현재 비밀번호:</label>
+                  <input type="password" id="passwordDelete1">
+                  <label for="password-delete2">새 비밀번호:</label>
+                  <input type="password" id="passwordDelete2">
+                  <button id="delete-button">확인</button>
+                 </div>
 
 
     <!-- Footer Section Begin -->
@@ -250,6 +263,8 @@
       </div>
     </footer>
     <!-- Footer Section End -->
+
+    <script src="./src/mypage.js"></script>
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
