fix: 닉네임 가져오기 성공
데이터 형식을 response.data.~에서 responce.data로 변경하여 서버 데이터
조회

--- a/public/index.html
+++ b/public/index.html
@@ -123,8 +123,8 @@
                     <div id="signupModal" class="modal">
                       <div class="modal-content">
                         <form>
-                          <label for="admin">어드민</label>
-                         <input id="admin" name="admin" value="1" />
+                          <label for="admin"></label>
+                         <input id="admin" name="admin" value="1" style="display: none;"/>
                           <br>
 
                           <label for="signupEmail">이메일:</label>
