--- a/public/mypage.html
+++ b/public/mypage.html
@@ -177,9 +177,11 @@
                         <div class="section-title">
                             <h2>마이페이지: 오늘의 메뉴</h2>
                         </div>
-                        <div class="featured__controls">
-                        </div>
                     </div>
+                  <div class="mypageImg">
+                    실제 이미지 가져올 땐 닉네임처럼 axios.get 써서 가져오면 될거같습니다.
+                    <img src="./img/simsimi.png" alt="테스트용">
+                  </div>
                 </div>
               </div>  
              </section>
@@ -195,7 +197,7 @@
                 <input type="password" id="password">
                 <label for="new-password">새 비밀번호:</label>
                 <input type="password" id="new-password">
-                <button id="update-password-button">수정하기</button>
+                <button id="update-password-button" type="submit">수정하기</button>
                </div>
                <div>
                 <button id="open-modal-delete">회원 탈퇴</button>
